--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,35 @@
-twitter-to-kafka-service/twitter-to-kafka-service/logs/twitter-to-kafka-service.log
-twitter-to-kafka-service/twitter-to-kafka-service/logs/archived/twitter-to-kafka-service-log.2024-01-07.0.log
-target
-twitter-to-kafka-service/logs/twitter-to-kafka-service.log
-twitter-to-kafka-service/twitter-to-kafka-service/logs/twitter-to-kafka-service.log
-twitter-to-kafka-service/twitter-to-kafka-service/logs/twitter-to-kafka-service.log
+HELP.md
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+*.log
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### VS Code ###
+.vscode/
