--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,38 @@
-app-config-data/target
-config-server/target
-kafka/kafka-admin/target
-kafka/kafka-model/target
-kafka/kafka-producer/target
-twitter-to-kafka-service/target
-*.class
-common-config/target
-config-server-repository/target
-kafka/target
+HELP.md
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
 *.log
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### VS Code ###
+.vscode/
+
+/docker-compose/prometheus/**
+/docker-compose/grafana/**
